# docs/swagger.json
@@ -8,6 +8,45 @@
     "host": "localhost:3000",
     "basePath": "/api/v1",
     "paths": {
+        "/user/me": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "get user profile data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "access token 'Bearer {token}'",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserView"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HttpErr"
+                        }
+                    }
+                }
+            }
+        },
         "/user/sign-in": {
             "post": {
                 "consumes": [
@@ -103,9 +142,13 @@
         "dto.UserAuthResponse": {
             "type": "object",
             "required": [
+                "id",
                 "token"
             ],
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
                 }
@@ -150,6 +193,30 @@
                     "example": "qwerty123_AOISROKT(:#*L(*))"
                 }
             }
+        },
+        "dto.UserView": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "me@femail.ru"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "vanya228"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "SOME_HASHED_PASSWD"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
