# internal/api/handlers/v1/user.go
@@ -1,18 +1,24 @@
 package v1
 
 import (
+	"strings"
+
 	"github.com/gofiber/fiber/v2"
+	"github.com/msakp/golang-web-template/internal/api/middleware"
+	"github.com/msakp/golang-web-template/internal/common/utils"
 	"github.com/msakp/golang-web-template/internal/domain/contracts"
 	"github.com/msakp/golang-web-template/internal/domain/dto"
 )
 
 type userHandler struct {
 	userService contracts.UserService
+	secretKey string
 }
 
-func NewUserHandler(us contracts.UserService) *userHandler {
+func NewUserHandler(us contracts.UserService, secretKey string) *userHandler {
 	return &userHandler{
 		userService: us,
+		secretKey: secretKey,
 	}
 }
 
@@ -20,21 +26,9 @@ func (uh *userHandler) Setup(r fiber.Router) {
 	u := r.Group("/user")
 	u.Post("/sign-up", uh.Register)
 	u.Post("/sign-in", uh.Login)
+	u.Get("/me", middleware.AuthMiddleware(uh.secretKey), uh.GetInfo)
 
 }
-
-func (uh *userHandler) Create(c *fiber.Ctx) error {
-	userRegister := new(dto.UserRegister)
-	if err := c.BodyParser(userRegister); err != nil {
-		return c.Status(400).JSON(fiber.Map{"err": err.Error()})
-	}
-	_, err := uh.userService.Register(userRegister)
-	if err != nil {
-		return c.Status(400).JSON(fiber.Map{"err": err.Error()})
-	}
-	return c.Status(200).JSON(fiber.Map{"status": "ok"})
-}
-
 
 // RegisterUser godoc
 //
@@ -51,11 +45,11 @@ func (uh *userHandler) Register(c *fiber.Ctx) error {
 	if err := c.BodyParser(userRegister); err != nil {
 		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
 	}
-	token, err := uh.userService.Register(userRegister)
+	token, id, err := uh.userService.Register(userRegister)
 	if err != nil {
 		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
 	}
-	return c.Status(201).JSON(dto.UserAuthResponse{Token: token})
+	return c.Status(201).JSON(dto.UserAuthResponse{Token: token, Id: id})
 }
 
 
@@ -74,10 +68,32 @@ func (uh *userHandler) Login(c *fiber.Ctx) error {
 	if err := c.BodyParser(userLogin); err != nil {
 		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
 	}
-	token, err := uh.userService.Login(userLogin)
+	token, id, err := uh.userService.Login(userLogin)
 	if err != nil {
 		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
 	}
-	return c.Status(200).JSON(dto.UserAuthResponse{Token: token})
+	return c.Status(200).JSON(dto.UserAuthResponse{Token: token, Id: id})
 
+}
+
+
+
+// Profile godoc
+//
+//	@Tags		users
+//	@Summary	get user profile data
+//	@Security	Bearer
+//  @Param Authorization header string true "access token 'Bearer {token}'"
+//	@Produce	json
+//	@Success	200	{object}	dto.UserView
+//	@Failure	401	{object}	dto.HttpErr
+//	@Router		/user/me [get]
+func (uh *userHandler) GetInfo(c *fiber.Ctx) error{
+	tokenString := strings.Split(c.Get("Authorization"), " ")
+	email, _ := utils.GetSubFromToken(tokenString[1], uh.secretKey)
+	user, err := uh.userService.GetProfile(email)
+	if err != nil{
+		return c.Status(400).JSON(dto.HttpErr{Message: err.Error()})
+	}
+	return c.Status(200).JSON(user)
 }
