# internal/domain/dto/user.go
@@ -1,5 +1,7 @@
 package dto
 
+import "github.com/google/uuid"
+
 type UserRegister struct {
 	Name             string `json:"name" validate:"required" minLenth:"3" maxLength:"16" example:"msa"`
 	Email            string `json:"email" validate:"required" example:"yoyoyo@femail.ru"`
@@ -13,10 +15,12 @@ type UserLogin struct {
 }
 
 type UserView struct {
-	Name  string
-	Email string
+	Name  string `json:"name" example:"vanya228"`
+	Email string `json:"email" example:"me@femail.ru"`
+	PasswordHashed string `json:"password" example:"SOME_HASHED_PASSWD"`
 }
 
 type UserAuthResponse struct {
 	Token string `json:"token" validate:"required"`
+	Id uuid.UUID `json:"id" validate:"required"`
 }
